z-index adjustment and form fix

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -33,6 +33,7 @@
         left: 1.5rem;
         border-left: 0.1rem solid $borderColor;
         border-right: 0.1rem solid $borderColor;
+        z-index: 1;
     }
     &::after {
         content: "";
@@ -43,5 +44,6 @@
         left: 0;
         border-top: 0.1rem solid $borderColor;
         border-bottom: 0.1rem solid $borderColor;
+        z-index: 1;
     }
 }
